Fixed chat hidden and date error on Safari

--- a/src/app/views/header/header.component.css
+++ b/src/app/views/header/header.component.css
@@ -153,6 +153,10 @@
 
 }
 
+div >>> div{
+  overflow: visible !important;
+}
+
 @media screen and (max-width: 1125px) {
 
   .profile-icon {
